# ilara

./: .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.yml
proxy/: dockerfile  dockerfile.dev  nginx-dev.conf  nginx.conf
web/: .env.example  .gitignore  dockerfile  dockerfile.dev  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
web/ilara/: asgi.py  urls.py  wsgi.py
web/ilara/backoffice/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
web/ilara/backoffice/migrations/: 0001_initial.py  0002_alter_userprofile_options.py  0003_alter_userprofile_phone.py
web/ilara/checkout/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
web/ilara/checkout/migrations/: 0001_initial.py  0002_alter_orderitem_options.py  0003_payment_created_at.py  0004_alter_order_amount_alter_order_user.py
web/ilara/inventory/: admin.py  apps.py  models.py
web/ilara/inventory/migrations/: 0001_initial.py  0002_alter_product_options_product_active_and_more.py  0003_product_image.py
web/ilara/settings/: __init__.py  base.py  develop.py  prod.py
web/static/ilara/backoffice/: create-anonymous-user.js  login.js
web/static/ilara/checkout/js/: add-to-cart.js  assign-to-user.js  complete-checkout.js  remove-from-cart.js
web/templates/: base.html  navbar.html
web/templates/backoffice/: login.html  signup.html
web/templates/checkout/: cart.html  checkout.html  storefront.html
