[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["jimmykamau <jimmykambiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
dj-email-url = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
